tests/NormalTests/paczka1/small_fuzzy/28729558.err
Error in line 8: A972 A972 78,0
Error in line 1: zG2JK A506 6,5
Error in line 13: zG2JK S427 63,6
